<resources>
    <string name="app_name">QUIZie</string>
    <string name="play_game">Play Game</string>
    <string name="score">Score: 0</string>
    <string name="question">Question: 1</string>
    <string name="timer">Time: 20s</string>
    <string name="question_text">Question?</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="result_msg">Well played but you failed. All The Best for Next Game.</string>
    <string name="total_score">Total Score</string>
    <string name="play_again">Play Again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderboard">LEADERBOARD</string>
</resources>